# ivy

./: .gitignore  PLAN.md  README.md  ROADMAP.md  logs.txt  render.yaml  wrangler.toml
.github/workflows/: deploy-backend-aca.yml  deploy-frontend-swa.yml
backend/: .env.example  app.py  pipeline_status.py  pyproject.toml
backend/agents/: __init__.py  ingestion_agent.py  plot_hole_agent.py  timeline_agent.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  document.py  system.py
backend/integrations/azure/: blob_client.py  openai_client.py
backend/integrations/cosmos/: cosmos_client.py  cosmos_repository.py
backend/parse/: parse.py
backend/services/: __init__.py  ingestion_service.py  parse_service.py  test_parse.py  timeline_service.py
backend/tests/: conftest.py  test_cosmos_repository.py  test_document_api.py  test_document_pipeline.py  test_plot_hole_agent.py  test_timeline_agent.py
backend/utils/: clients.py
client/: index.html  package.json  tsconfig.json  vite.config.ts
client-claude/: Ivy.html  atoms.jsx  data.jsx  index.html  package.json  shell.jsx  theme.jsx  view-characters.jsx  view-issues.jsx  view-library.jsx  view-manuscript.jsx  view-timeline.jsx  vite.config.ts
client-claude/src/: App.tsx  main.tsx  style.css
client-claude/src/api/: upload.ts
client/src/: App.tsx  style.css
docs/: azure-deployment.md
ivy-client/: package-lock.json  package.json  vite.config.ts
ivy-client/public/: staticwebapp.config.json
ivy-client/src/: App.tsx  main.tsx  style.css
server/: .env.example  Dockerfile  README.md  app.py  config.py  main.py  pipeline_status.py  pyproject.toml  schema.sql
server/agents/: __init__.py  ingestion_agent.py  plot_hole_agent.py  timeline_agent.py
server/api/: __init__.py
server/api/routes/: __init__.py  document.py  system.py  upload.py
server/db/: __init__.py  connection.py  redis.py  repository.py
server/integrations/azure/: blob_repository.py  openai_client.py
server/services/: __init__.py  ingestion_service.py  parse_service.py
server/tests/: test_cosmos_repository.py  test_document_api.py  test_openai_client.py  test_parse_service.py  test_system_api.py
server/utils/: client.py  job.py  storage.py
(+36 files in other folders)
