[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.2",
    "azure-storage-blob>=12.28.0",
    "fastapi>=0.129.1",
    "gremlinpython>=3.7.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
