[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.38.0",
    "fastapi>=0.135.3",
    "openai>=1.82.0",
    "langgraph>=1.1.6",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]
